--- a/static/css/layui.css
+++ b/static/css/layui.css
@@ -2099,11 +2099,12 @@ a cite {
 
 .layui-elem-quote {
     margin-bottom: 10px;
-    padding: 15px;
-    line-height: 1.8;
+    padding: 10px;
+    line-height: 1;
     border-left: 5px solid #16b777;
     border-radius: 0 2px 2px 0;
-    background-color: #fafafa
+    background-color: #fafafa;
+    font-size: 12px;
 }
 
 .layui-quote-nm {
